--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -2,18 +2,54 @@
 
 ## 目录
 
-### 调用函数
+## 调用函数
 
 Python支持函数，不仅可以灵活地自定义函数，而且本身也内置了很多有用的函数。
 
-使用help(函数名)可以查看内置函数(built-in function, BIF)的使用方法和用途。 还可以直接查看[官方文档](https://docs.python.org/3/library/functions.html#abs)。
+除了可以使用help(函数名)查看内置函数（**built-in function, BIF**）的用法和用途，也可以直接查看[官方文档](https://docs.python.org/3/library/functions.html#abs)。
 
-函数名其实就是指向一个函数对象的引用，完全可以把函数名赋给一个变量，相当于给这个函数起了一个**“别名”**。
+函数名其实就是指向一个函数对象的引用，完全可以把函数名赋给一个变量，相当于给这个函数起了一个**别名**。
 
 ```python
 >>> a = abs # 变量a指向abs函数
 >>> a(-1) # 所以也可以通过a调用abs函数
 1
+```
+
+---
+
+## 定义函数
+
+定义函数要使用 `def` 语句，依次写出 *函数名*、*括号*、*括号中的参数* 和*冒号*，然后，在缩进块中编写函数体，函数的返回值用 `return` 语句返回。例如：
+
+```python
+def my_abs(x):
+
+    if x >= 0:
+        return x
+    else:
+        return -x
+```
+
+注意，如果没有return语句，则函数执行完毕也会返回 `None`，如果想要函数返回 `None`，除了写 `return None` 之外还可以直接写 `return`。
+
+我们既可以直接在命令行定义函数，也可以把函数放在 `.py` 文件中定义。若采用后者,则使用函数时要先把工作目录跳转到文件保存的目录，再启动Python，然后用 `from 文件名 import 函数名` 即可导入函数。(这里文件名不需要包含文件扩展名 `.py`)
+
+比方说把上面的 `my_abs` 函数写入到 `my_abs.py` 文件中，保存在桌面，使用该函数需要先 `cd` 到桌面目录，然后再导入和使用：
+
+```python
+C:\Users\Administrator>cd Desktop
+
+C:\Users\Administrator\Desktop>python
+Python 3.5.1 |Anaconda 4.0.0 (64-bit)| (default, Feb 16 2016, 09:49:46) [MSC v.1900 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>> from my_abs import my_abs
+>>> my_abs(5)
+5
+>>> my_abs(0)
+0
+>>> my_abs(-5)
+5
 ```
 
 ---
