My_Python_Notebook：定义函数-空函数

--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -54,3 +54,20 @@ Type "help", "copyright", "credits" or "license" for more information.
 
 ---
 
+### 空函数
+
+如果还没想好怎么写一个函数，可以用 `pass` 语句来实现一个空函数，如：
+
+```python
+def nop():
+    pass
+```
+
+`pass` 语句什么都不做，但可以用来做占位符。用在其他语句中也可以，如：
+
+```python
+if age >= 18:
+    pass
+```
+
+---
