My_Python_Notebook：函数的参数-默认参数

--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -164,3 +164,76 @@ def power(x, n):
 如这个幂函数，调用时使用 `power(5,2)` 这样的格式即可，5和2会按位置顺序分别被赋给变量x和n。
 
 ---
+
+### 默认参数
+
+有时候我们希望函数带有默认设置，比方说令幂函数默认计算平方，这样就不需要每次都传入参数n了。 可以使用默认参数来实现这样的功能：
+
+```python
+def power(x, n=2):
+s = 1
+while n > 0:
+    n = n - 1
+    s = s * x
+return s
+```
+
+此时使用 `power(5)` 也能调用幂函数，计算的是5的平方。
+
+在编写函数的参数列表时，应当注意：
+
+1. 必选参数在前，默认参数在后，否则Python的解释器会报错。
+2. 有多个参数时，把变化大的参数放前面，变化小的参数放后面。这样我们可以把变化小的参数设为默认参数，调用的时候就不需要每次都填写这个参数了。
+
+**例子**：
+
+```python
+def enroll(name, gender, age=6, city='Beijing'):
+    print('name:', name)
+    print('gender:', gender)
+    print('age:', age)
+    print('city:', city)
+```
+
+age和city是默认参数，调用时可以不提供。并且提供默认参数时既可以按顺序也可以不按顺序：
+
+```python
+enroll('Bob', 'M', 7)
+enroll('Adam', 'M', city='Tianjin')
+```
+
+按顺序不需指定参数名，**不按顺序时则必须提供参数名，这样其他未提供的参数依然使用默认参数的值**。
+
+注意**默认参数必须指向不可变对象**！举个例子：
+
+```python
+def add_end(L=[]):
+    L.append('END')
+    return L
+```
+
+多次使用默认参数时：
+
+```python
+>>> add_end()
+['END']
+>>> add_end()
+['END', 'END']
+>>> add_end()
+['END', 'END', 'END']
+```
+
+可以看到这里默认参数的内容改变了，因为L是可变对象，每次调用add_end，函数会修改默认参数的内容。 所以切记默认参数要指向不可变对象，要实现同样的功能，使用None就可以了。
+
+```python
+def add_end(L=None):
+if L is None:
+    L = []
+L.append('END')
+return L
+```
+
+使用不可变对象做参数，在多任务环境下读取对象不需要加锁，同时读没有问题。因此能使用不可变对象就尽量用不可变对象。
+
+---
+
