--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -227,13 +227,55 @@ def add_end(L=[]):
 
 ```python
 def add_end(L=None):
-if L is None:
-    L = []
-L.append('END')
-return L
+    if L is None:
+        L = []
+    L.append('END')
+    return L
 ```
 
 使用不可变对象做参数，在多任务环境下读取对象不需要加锁，同时读没有问题。因此能使用不可变对象就尽量用不可变对象。
 
 ---
 
+### 可变参数
+
+可变参数即**传入的参数个数可变，传入任意个参数都可以** 。先看一个例子：
+
+```python
+def calc(numbers):
+    sum = 0
+    for n in numbers:
+        sum = sum + n * n
+    return sum
+```
+
+这个求和函数只有一个参数，必须传入一个list或者tuple才行，即 `calc([1, 2, 3，7])` 或者 `calc((1, 3, 5, 7))`。如果使用可变参数，则：
+
+```python
+def calc(*numbers):
+    sum = 0
+    for n in numbers:
+        sum = sum + n * n
+    return sum
+```
+
+只是在参数前面加了一个 `*` 号，函数内容不需要改变。这样定义的函数可以使用任意个数的参数，包括0个。
+
+```python
+>>> calc(1, 2)
+5
+>>> calc()
+0
+```
+
+传入参数时不需要构建list或者tuple，**函数接收参数时会自动构建为一个tuple**。 如果已经有一个list或者tuple要调用可变参数也很方便，**将它变成可变参数**就可以了。
+
+```python
+>>> nums = [1, 2, 3]
+>>> calc(*nums) # 在列表前面加上一个星号即可完成转换
+14
+```
+
+同样只需要加一个 `*` 号即可完成转换。
+
+---
