My_Python_Notebook：函数的参数-参数组合

--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -278,6 +278,8 @@ def calc(*numbers):
 
 同样只需要加一个 `*` 号即可完成转换。
 
+args是一个tuple类型的对象，**没有传入时就是一个空的tuple**。
+
 ---
 
 ### 关键字参数
@@ -374,3 +376,52 @@ TypeError: person() got an unexpected keyword argument 'joc'
 **命名关键字参数限制了可以传入怎样的参数，如果传入参数的参数名不在其中也会报错。**
 
 ---
+
+###参数组合
+
+在Python中定义函数除了**可变参数和命名关键字参数无法混合**，可以任意组合必选参数、默认参数、可变参数、关键字参数和命名关键字参数。
+
+注意！**参数定义的顺序必须是： `必选参数 -> 默认参数 -> 可变参数/命名关键字参数 -> 关键字参数`**。
+
+**例子**：
+
+```python
+def f1(a, b, c=0, *args, **kw):
+    print('a =', a, 'b =', b, 'c =', c, 'args =', args, 'kw =', kw)
+
+def f2(a, b, c=0, *, d, **kw):
+    print('a =', a, 'b =', b, 'c =', c, 'd =', d, 'kw =', kw)
+```
+
+调用：
+
+```python
+>>> f1(1, 2)
+a = 1 b = 2 c = 0 args = () kw = {}
+>>> f1(1, 2, c=3)
+a = 1 b = 2 c = 3 args = () kw = {}
+>>> f1(1, 2, 3, 'a', 'b')
+a = 1 b = 2 c = 3 args = ('a', 'b') kw = {}
+>>> f1(1, 2, 3, 'a', 'b', x=99)
+a = 1 b = 2 c = 3 args = ('a', 'b') kw = {'x': 99}
+>>> f2(1, 2, d=99, ext=None)
+a = 1 b = 2 c = 0 d = 99 kw = {'ext': None}
+```
+
+除了这种普通的调用方式，通过tuple和dict也可以很神奇地调用！
+
+```python
+>>> args = (1, 2, 3, 4)
+>>> kw = {'d': 99, 'x': '#'}
+>>> f1(*args, **kw)
+a = 1 b = 2 c = 3 args = (4,) kw = {'d': 99, 'x': '#'}
+>>> args = (1, 2, 3)
+>>> kw = {'d': 88, 'x': '#'}
+>>> f2(*args, **kw)
+a = 1 b = 2 c = 3 d = 88 kw = {'x': '#'}
+```
+
+赋值是按照上面的固定顺序来进行的！**对于任意函数，都可以通过类似 `func(*args, **kw)` 的形式调用它，无论它的参数是如何定义的**。
+
+---
+
