--- a/My_Python_Notebook/02函数.md
+++ b/My_Python_Notebook/02函数.md
@@ -425,3 +425,30 @@ a = 1 b = 2 c = 3 d = 88 kw = {'x': '#'}
 
 ---
 
+###小结
+
+Python的函数具有非常灵活的参数形态，既可以实现简单的调用，又可以传入非常复杂的参数。
+
+**默认参数一定要用不可变对象**，如果是可变对象，程序运行时会有逻辑错误！
+
+要注意定义可变参数和关键字参数的语法：
+
+`*args` 是可变参数，`*args` 接收的是一个**tuple**；
+
+`**kw` 是关键字参数，`**kw` 接收的是一个**dict**。
+
+以及调用函数时如何传入可变参数和关键字参数的语法：
+
+**可变参数既可以直接传入**：func(1, 2, 3)，**又可以先组装list或tuple**，再通过 `*args` 传入： `func(*(1, 2, 3))`；
+
+**关键字参数既可以直接传入**：func(a=1, b=2)，**又可以先组装dict**，再通过 `**kw` 传入： `func(**{'a': 1, 'b': 2})`。
+
+使用 `*args` 和 `**kw` 这两个名字是Python的习惯写法，当然也可以用其他参数名，但最好使用习惯用法。
+
+命名关键字参数是为了限制调用者可以传入的参数名，并且我们可以为其提供默认值。
+
+**定义命名关键字参数不要忘了写分隔符 `*` ，否则定义的将是位置参数。
+
+---
+
+<br>
