My_Python_Notebook：高级特性-切片

--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -1,5 +1,13 @@
 # 高级特性
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [切片](#切片)
+
+<!-- /MarkdownTOC -->
+
 在Python中，代码越少越简单约好。基于这一思想，后面的几个篇章介绍Python一些非常有用的高级特性。
 
 比方说构造一个1~99的奇数列表，可以简单地用循环实现：
@@ -11,3 +19,75 @@ while n <= 99:
     L.append(n)
     n = n + 2
 ```
+
+## 切片
+
+切片即取一个list或tuple部分元素的操作。 当我们需要取列表前n个元素，即索引0~**N-1**的元素时，有两种方法：
+
+1.方法1是用循环
+
+```python
+>>> L = ['Michael', 'Sarah', 'Tracy', 'Bob', 'Jack']
+>>> r = []
+>>> n = 3
+>>> for i in range(n):
+...     r.append(L[i])
+...
+>>> r
+['Michael', 'Sarah', 'Tracy']
+```
+
+2.方法2是利用**切片操作符**
+
+```python
+>>> L[0:3]
+['Michael', 'Sarah', 'Tracy']
+```
+
+如果经常要取指定的索引范围，用循环就显得太过繁琐了，Python提供了切片操作来简化这个过程。注意，**切片操作的索引左闭右开**。
+
+如果索引从0开始，还可以改写为 `L[:3]`。 如果索引到列表最后结束，同样可以简略写为 `L[0:]`。
+
+此外，Python还支持**倒数切片**。**列表最后一项的索引在倒数中为-1**。
+
+```python
+>>> L[-2:]
+['Bob', 'Jack']
+>>> L[-2:-1]
+['Bob']
+```
+
+特别地，切片操作还支持每隔k个元素取1个这样的操作。先创建一个0~99的整数列表：
+
+```python
+>>> L = list(range(100))
+>>> L
+[0, 1, 2, 3, ..., 99]
+```
+
+取后10个只需起始索引为-10即可：
+
+```python
+>>> L[-10:]
+[90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
+```
+
+前十个数隔两个取一个：
+
+```python
+>>> L[:10:2]
+[0, 2, 4, 6, 8]
+```
+
+所有数，隔五个取一个：
+
+```python
+>>> L[::5]
+[0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95]
+```
+
+注意！**对list进行切片操作得到的还是list；对tuple进行切片操作得到的还是tuple**。 特别地，**字符串也可看为一种list，同样可以使用切片操作**。
+
+---
+
+<br>
