My_Python_Notebook：高级特性-迭代

--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -5,6 +5,7 @@
 <!-- MarkdownTOC -->
 
 - [切片](#切片)
+- [迭代](#迭代)
 
 <!-- /MarkdownTOC -->
 
@@ -91,3 +92,73 @@ while n <= 99:
 ---
 
 <br>
+
+## 迭代
+
+Python中可迭代的对象包括字符串，list，tuple，dict，set和文件等等。 对这些可迭代对象可以使用 `for...in` 循环来遍历。Python对for循环的抽象程度高于Java和C，所以即使没有下标也能迭代。
+
+比如循环遍历一个dict：
+
+```python
+>>> d = {'a': 1, 'b': 2, 'c': 3}
+>>> for key in d:
+...   print(key, d[key])
+...
+a 1
+c 3
+b 2
+```
+
+直接打印key会打印所有dict中的key，更改迭代的写法为 `for value in d.values()` 就变为迭代dict中所有的value。 如果同时要访问key和value，还可以使用 `for k, v in d.items()`。
+
+字符串同样可以用for循环迭代：
+
+```python
+>>> for ch in 'ABC':
+...     print(ch)
+...
+A
+B
+C
+```
+
+要**判断一个对象是否可迭代对象可以通过collections模块的 `Iterable` 类型**来判断：
+
+```python
+>>> from collections import Iterable
+>>> isinstance('abc', Iterable) # str是否可迭代
+True
+>>> isinstance([1,2,3], Iterable) # list是否可迭代
+True
+>>> isinstance(123, Iterable) # 整数是否可迭代
+False
+```
+
+正如上面迭代dict一样，for循环可以同时引用两个甚至多个变量：
+
+```python
+>>> for i, value in enumerate(['A', 'B', 'C']):
+...     print(i, value)
+...
+0 A
+1 B
+2 C
+
+>>> for x, y in [(1, 1), (2, 4), (3, 9)]:
+...     print(x, y)
+...
+1 1
+2 4
+3 9
+```
+
+例子里的 `enumerate` 方法通过[enumerate官方文档](https://docs.python.org/3/library/functions.html#enumerate)了解，它返回一个枚举对象，并且传入参数可迭代时它就是一个可迭代的对象。
+
+**可以用 `list(enumerate(可迭代对象))` 把一个可迭代对象变为元素为tuple类型的list**，每个tuple有两个元素，形式如：`(序号，原可迭代对象内容)`。
+
+并且使用enumerate时可以指定开始的序号，`enumerate(iterable, start=0)`，不写时默认参数为0，即序号从0开始。 可以自己指定为其他数。
+
+---
+
+<br>
+
