--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -6,6 +6,7 @@
 
 - [切片](#切片)
 - [迭代](#迭代)
+- [列表生成式](#列表生成式)
 
 <!-- /MarkdownTOC -->
 
@@ -157,6 +158,79 @@ False
 **可以用 `list(enumerate(可迭代对象))` 把一个可迭代对象变为元素为tuple类型的list**，每个tuple有两个元素，形式如：`(序号，原可迭代对象内容)`。
 
 并且使用enumerate时可以指定开始的序号，`enumerate(iterable, start=0)`，不写时默认参数为0，即序号从0开始。 可以自己指定为其他数。
+
+---
+
+<br>
+
+## 列表生成式
+
+列表生成式即List Comprehensions，是Python内置的用于创建list的方式。
+
+比方说生成1到10，可以：
+
+```python
+>>> list(range(1, 11))
+[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+```
+
+要生成 `[1x1, 2x2, 3x3, ..., 10x10]`平方序列，笨办法是用循环：
+
+```python
+>>> L = []
+>>> for x in range(1, 11):
+...    L.append(x * x)
+...
+>>> L
+[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]
+```
+
+用列表生成式只用一个语句就可以了：
+
+```python
+>>> [x * x for x in range(1, 11)]
+[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]
+```
+
+写列表生成式时，把要生成的元素 `x * x` 放到前面，后面跟for循环，就可以把list创建出来。
+
+在for循环后面还可以加上if判断，比方说这个例子用于筛选出偶数的平方数：
+
+```python
+>>> [x * x for x in range(1, 11) if x % 2 == 0]
+[4, 16, 36, 64, 100]
+```
+
+使用两层循环还可以生成全排列：
+
+```python
+>>> [m + n for m in 'ABC' for n in 'XYZ']
+['AX', 'AY', 'AZ', 'BX', 'BY', 'BZ', 'CX', 'CY', 'CZ']
+```
+
+列出当前目录下所有文件和目录名也非常简单：
+
+```python
+>>> import os # 导入os模块，模块的概念后面讲到
+>>> [d for d in os.listdir('.')] # os.listdir可以列出文件和目录
+['.emacs.d', '.Trash',  'Applications', 'Desktop', 'Documents']
+```
+
+前面一节提到for循环迭代可以同时用两个变量，这里列表生成式同样可以用两个变量来生成list。
+
+```python
+>>> d = {'x': 'A', 'y': 'B', 'z': 'C' }
+>>> [k + '=' + v for k, v in d.items()]
+['y=B', 'x=A', 'z=C']
+```
+
+把list中所有字符串的大写字母换成小写：
+
+```python
+>>> L = ['Hello', 'World', 'IBM', 'Apple']
+>>> [s.lower() for s in L]
+['hello', 'world', 'ibm', 'apple']
+```
 
 ---
 
