My_Python_Notebook：生成器

--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -7,6 +7,7 @@
 - [切片](#切片)
 - [迭代](#迭代)
 - [列表生成式](#列表生成式)
+    - [生成器](#生成器)
 
 <!-- /MarkdownTOC -->
 
@@ -235,4 +236,131 @@ False
 ---
 
 <br>
+
+### 生成器
+
+通过列表生成式可以简单地创建列表，但受到内存限制，列表容量是有限的。如果列表元素很多，而我们仅需访问前面一部分元素，则会造成很大的存储空间的浪费。
+
+**生成器(generator)**就意在解决这个问题，允许在循环过程中不断推算出后续元素，而不用创建完整的list。在Python中，这种边循环边计算的机制称为生成器。
+
+和列表生成式的区别很简单，仅仅是把外层的**[]方括号**换成**()圆括号**。
+
+```python
+>>> L = [x * x for x in range(5)]
+>>> L
+[0, 1, 4, 9, 16]
+>>> g = (x * x for x in range(10))
+>>> g
+<generator object <genexpr> at 0x1022ef630>
+```
+
+生成器无法通过索引访问，因为它**保存的是算法**，要遍历生成器需要通过 `next()` 函数。
+
+```python
+>>> next(g)
+0
+>>> next(g)
+1
+>>> next(g)
+4
+>>> next(g)
+9
+>>> next(g)
+16
+>>> next(g)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+StopIteration
+```
+
+当到达最后一个元素时，再使用 `next()` 就会出现 `StopIteration` 错误。 当然，实际遍历生成器时不会这样一个一个用 `next()` 方法遍历，用for循环进行迭代即可。
+
+```python
+>>> g = (x * x for x in range(5))
+>>> for n in g:
+...     print(n)
+...
+0
+1
+4
+9
+16
+```
+
+当算法比较复杂，用简单for循环无法写出来时，还可以通过函数来实现：
+
+```python
+def fib(max):
+    n, a, b = 0, 0, 1
+    while n < max:
+        print(b)
+        a, b = b, a + b
+        n = n + 1
+    return 'done'
+```
+
+比方说这个计算斐波那契数列的函数，稍微改写一下即可变成generator：
+
+```python
+def fib(max):
+    n, a, b = 0, 0, 1
+    while n < max:
+        yield b  #只修改这里
+        a, b = b, a + b
+        n = n + 1
+    return 'done'
+```
+
+这是定义generator的另一种方法，**如果一个函数定义中包含yield关键字，则该函数就变为一个generator**。
+
+```python
+>>> f = fib(6)
+>>> f
+<generator object fib at 0x104feaaa0>
+```
+
+函数是顺序执行，遇到return语句或到达最后一行函数语句就返回。而变成generator的函数，在每次调用 `next()` 的时候执行，**遇到yield就返回**，下次执行会从yield的地方开始。
+
+```python
+>>> for n in fib(6):
+...     print(n)
+...
+1
+1
+2
+3
+5
+8
+```
+
+同样地，把函数改成generator后，我们不需要用next()方法获取写一个返回值，而是只借用for循环进行迭代。
+
+但是这样就拿不到fib函数return语句的值(即字符串done)，要获取这个值必须捕获 `StopIteration` 这个错误，它的value就是我们返回的值：
+
+```python
+>>> g = fib(6)
+>>> while True:
+...     try:
+...         x = next(g)
+...         print('g:', x)
+...     except StopIteration as e:
+...         print('Generator return value:', e.value)
+...         break
+...
+g: 1
+g: 1
+g: 2
+g: 3
+g: 5
+g: 8
+Generator return value: done
+```
+
+生成器的工作原理是：在for循环的过程中不断计算出下一个元素，并在适当的条件结束for循环。
+
+对于函数改成的generator来说，**遇到return语句或者执行到函数体最后一行语句就结束generator**，for循环随之结束。
+
+普通函数和生成器函数可以通过调用进行区分，调用普通函数会直接返回结果，调用生成器函数则会返回一个生成器对象。
+
+---
 
