--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -8,6 +8,7 @@
 - [迭代](#迭代)
 - [列表生成式](#列表生成式)
     - [生成器](#生成器)
+    - [杨辉三角](#杨辉三角)
 
 <!-- /MarkdownTOC -->
 
@@ -363,4 +364,60 @@ Generator return value: done
 普通函数和生成器函数可以通过调用进行区分，调用普通函数会直接返回结果，调用生成器函数则会返回一个生成器对象。
 
 ---
+
+### 杨辉三角
+
+要求使用生成器生成1~10行的杨辉三角。 提示：把每一行当作一个list。
+
+```python
+def triangles(max):
+    n = 0
+    b = [1]
+    while n < max:
+        yield b
+        b = [1] + [ b[i] + b[i + 1] for i in range(len(b) - 1)] + [1]
+        n = n + 1
+```
+
+这段代码非常短，但是已经充分实现了题目要求，值得欣赏!
+
+```python
+>>> for L in triangles(6):
+...     L
+...
+[1]
+[1, 1]
+[1, 2, 1]
+[1, 3, 3, 1]
+[1, 4, 6, 4, 1]
+[1, 5, 10, 10, 5, 1]
+```
+
+代码里面有两个窍门，一是列表相加，注意不是列表元素相加。 列表相加相当于把后一个列表的元素全部append到前一个列表。如：
+
+```python
+>>> L = [1,2]
+>>> R = [3,4]
+>>> L+R
+[1, 2, 3, 4]
+```
+
+上面代码中的b即把每一行当作一个list，因为每一行的开头结尾都是1，所以可以每一行的list看作三个list的相加，一头一尾两个list是只有1个元素1的list，中间的list用列表生成式生成。
+
+另一个窍门就是这里的列表生成式。 注意这里计算时还没赋值，引用列表b的内容是上一行的信息，所以能巧妙地借助上一行计算相邻两数之和，最终得到含有n-2项的中间列表。
+
+补充解析一下代码执行的过程：
+
+```python
+b = [1], n = 0
+b = [1] + [1] = [1,1], n = 1 # 无中间列表
+b = [1] + [1+1] + [1], n = 2 # 中间列表包含1个元素
+b = [1] + [1+2, 2+1] + [1], n = 3 # 中间列表包含2个元素
+b = [1] + [1+3, 3+3, 3+1] + [1], n = 4 # 中间列表包含4个元素
+... ...
+```
+
+---
+
+<br>
 
