My_Python_Notebook：迭代器-小结

--- a/My_Python_Notebook/03高级特性.md
+++ b/My_Python_Notebook/03高级特性.md
@@ -10,6 +10,7 @@
     - [生成器](#生成器)
     - [杨辉三角](#杨辉三角)
 - [迭代器](#迭代器)
+    - [小结](#小结)
 
 <!-- /MarkdownTOC -->
 
@@ -456,3 +457,36 @@ Python的Iterator对象表示的其实是一个**数据流**，Iterator对象可
 Iterator甚至可以表示一个**无限大的数据流**，例如全体自然数。而使用list是永远不可能存储全体自然数的。
 
 ---
+
+### 小结
+
+凡是可作用于for循环的对象都是 `Iterable` 类型；
+
+凡是可作用于 `next()` 函数的对象都是 `Iterator` 类型，它们表示一个惰性计算的序列；
+
+集合数据类型如list、dict、str等是 `Iterable` 但不是 `Iterator`，不过可以通过 `iter()` 函数获得一个 `Iterator` 对象。
+
+Python的**for循环本质上就是通过不断调用 `next()` 函数实现的**，例如：
+
+```python
+for x in [1, 2, 3, 4, 5]:
+    pass
+```
+
+实际上完全等价于：
+
+```python
+# 首先获得Iterator对象:
+it = iter([1, 2, 3, 4, 5])
+# 循环:
+while True:
+    try:
+        # 获得下一个值:
+        x = next(it)
+    except StopIteration:
+        # 遇到StopIteration就退出循环
+        break
+```
+
+---
+
