My_Python_Notebook：函数式编程的三大特性

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -26,3 +26,19 @@
 函数式编程的一个特点就是，**允许把函数本身作为参数传入另一个函数，还允许返回一个函数**！
 
 Python**仅对函数式编程提供部分支持**。由于Python允许使用变量，因此，**Python不是纯函数式编程语言**。
+
+##三大特性：
+
+1. **immutable data**<br>
+变量不可变，或者说没有变量，只有常量。 函数式编程输入确定时输出就是确定的，函数内部的变量和函数外部的没有关系，不会受到外部操作的影响。
+
+2. **first class functions**<br>
+第一类函数(也称高阶函数)，意思是函数可以向变量一样用，可以像变量一样创建、修改、传递和返回。 这就允许我们把大段代码拆成函数一层层地调用，这种面向过程的写法相比循环更加直观。
+
+3. **尾递归优化**<br>
+之前一章的递归函数中已经提及过了，就是递归时返回函数本身而非表达式。 可惜Python中没有这个特性。
+
+---
+
+<br>
+
