My_Python_Notebook：函数式编程的几个好处

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -77,3 +77,13 @@ def square(i):
 
 <br>
 
+## 函数式编程的几个好处
+
+1. **parallelization 并行**<br>
+在并行环境下，各个线程之间不需要同步或互斥(变量都是内部的，不需要共享)。
+
+2. **lazy evaluation 惰性求值**<br>
+表达式不在它被绑定到变量之后就立即求值，而是在该值被取用的时候求值。
+
+3. **determinism 确定性**<br>
+输入是确定的，输出就是确定的。
