My_Python_Notebook：高阶函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -141,3 +141,7 @@ average = reduce(lambda x,y: x+y, positive_num) / len( positive_num )
 
 <br>
 
+## 高阶函数
+
+前面已经提到了函数式编程中的高阶函数特性，这一节将针对Python中的使用方式进行更详细的描述。
+
