My_Python_Notebook：变量可以指向函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -145,3 +145,17 @@ average = reduce(lambda x,y: x+y, positive_num) / len( positive_num )
 
 前面已经提到了函数式编程中的高阶函数特性，这一节将针对Python中的使用方式进行更详细的描述。
 
+### 变量可以指向函数
+
+```python
+>>> abs
+<built-in function abs>
+>>> f = abs
+>>> f
+<built-in function abs>
+>>> f(-10)
+10
+```
+
+这个例子表明在Python中变量是可以指向函数的，并且这样赋值的变量能够作为函数的别名使用。
+
