My_Python_Notebook：函数名也是变量

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -159,3 +159,17 @@ average = reduce(lambda x,y: x+y, positive_num) / len( positive_num )
 
 这个例子表明在Python中变量是可以指向函数的，并且这样赋值的变量能够作为函数的别名使用。
 
+### 函数名也是变量
+
+```python
+>>> abs = 10
+>>> abs(-10)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: 'int' object is not callable
+```
+
+这里把abs函数赋值为10，这样赋值以后abs就变成一个整形变量，指向int型对象10而不指向原本的函数了。所以无法再作为函数使用。
+
+想恢复abs函数要重启Python交互环境。 abs函数定义在 `__builtin__` 模块中，要让修改abs变量的指向在其它模块也生效，用 `__builtin__.abs = 10` 就可以了。 当然**实际写代码绝对不应该这样做**..
+
