My_Python_Notebook：传入函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -173,3 +173,16 @@ TypeError: 'int' object is not callable
 
 想恢复abs函数要重启Python交互环境。 abs函数定义在 `__builtin__` 模块中，要让修改abs变量的指向在其它模块也生效，用 `__builtin__.abs = 10` 就可以了。 当然**实际写代码绝对不应该这样做**..
 
+### 传入函数
+
+函数能够作为参数传递，接收这样的参数的函数就称为高阶函数。 简单举例：
+
+```python
+def add(x, y, f):
+    return f(x) + f(y)
+
+>>> add(-5, 6, abs)
+11
+```
+
+这里abs函数可以作为一个参数传入我们编写的add函数中，add函数就是一个高阶函数。
