--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -159,6 +159,8 @@ average = reduce(lambda x,y: x+y, positive_num) / len( positive_num )
 
 这个例子表明在Python中变量是可以指向函数的，并且这样赋值的变量能够作为函数的别名使用。
 
+---
+
 ### 函数名也是变量
 
 ```python
@@ -173,6 +175,8 @@ TypeError: 'int' object is not callable
 
 想恢复abs函数要重启Python交互环境。 abs函数定义在 `__builtin__` 模块中，要让修改abs变量的指向在其它模块也生效，用 `__builtin__.abs = 10` 就可以了。 当然**实际写代码绝对不应该这样做**..
 
+---
+
 ### 传入函数
 
 函数能够作为参数传递，接收这样的参数的函数就称为高阶函数。 简单举例：
@@ -186,3 +190,37 @@ def add(x, y, f):
 ```
 
 这里abs函数可以作为一个参数传入我们编写的add函数中，add函数就是一个高阶函数。
+
+---
+
+### map/reduce
+
+map()函数和reduce()函数是Python的两个内建函数(BIF)。
+
+#### map函数
+
+map()函数接收两个参数，一个是函数，一个是**Iterable对象**，map将传入的函数依次作用到序列的每个元素，并把结果作为**Iterator对象**返回。例如：
+
+```python
+>>> def f(x):
+...     return x * x
+...
+>>> r = map(f, [1, 2, 3, 4, 5, 6, 7, 8, 9])
+>>> list(r)
+[1, 4, 9, 16, 25, 36, 49, 64, 81]
+```
+
+这里直接使用list()函数将迭代器对象转换为一个列表。
+
+写循环也能达到同样效果，但是显然没有map()函数直观。 map()函数作为高阶函数，大大简化了代码，更易理解。
+
+```python
+>>> list(map(str, [1, 2, 3, 4, 5, 6, 7, 8, 9]))
+['1', '2', '3', '4', '5', '6', '7', '8', '9']
+```
+
+将一个整数列表转换为字符列表仅仅需要一行代码。
+
+
+
+---
