My_Python_Notebook：map/reduce-reduce函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -199,7 +199,7 @@ map()函数和reduce()函数是Python的两个内建函数(BIF)。
 
 #### map函数
 
-map()函数接收两个参数，一个是函数，一个是**Iterable对象**，map将传入的函数依次作用到序列的每个元素，并把结果作为**Iterator对象**返回。例如：
+map()函数接收两个参数，一个是函数，一个是**Iterable对象**，map将传入的函数依次作用到序列的每个元素，并把结果作为**Iterator对象**（惰性序列，可以用list转换为列表输出）返回。例如：
 
 ```python
 >>> def f(x):
@@ -221,6 +221,52 @@ map()函数接收两个参数，一个是函数，一个是**Iterable对象**，
 
 将一个整数列表转换为字符列表仅仅需要一行代码。
 
+#### reduce函数
 
+reduce接收两个参数，一个是函数（假设该函数称为f），一个是Iterable对象（假设是l）。函数f必须接收两个参数，reduce函数每次会把上一次函数f返回的值和l的下一个元素传入到f中，直到l中所有元素都参与过运算时返回函数f最后返回的值（第一次传入时传入l的头两个元素）。
+
+```python
+>>> from functools import reduce
+>>> def add(x, y):
+...     return x + y
+...
+>>> reduce(add, [1, 3, 5, 7, 9])
+25
+```
+
+这里举了一个最简单的序列求和作例子(当然实际上我们直接用sum()函数更方便，这里只是为了举例子)。 这里reduce函数每次将add**作用于序列的前两个元素**，并**把结果返回序列的头部**，直到序列只剩下1个元素就返回结果（这样理解可能更直观一些）。
+
+```python
+>>> from functools import reduce
+>>> def fn(x, y):
+...     return x * 10 + y
+...
+>>> def char2num(s):
+...     return {'0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9}[s] #字符对应整数的dict，返回传入字符对应的整数
+...
+>>> reduce(fn, map(char2num, '13579'))
+13579
+```
+
+可以整理一下，作为一个整体的str2int函数：
+
+```python
+def str2int(s):
+    def fn(x, y):
+        return x * 10 + y
+    def char2num(s):
+        return {'0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9}[s]
+    return reduce(fn, map(char2num, s))
+```
+
+使用lambda匿名函数还可以进一步简化：
+
+```python
+def char2num(s):
+    return {'0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9}[s]
+
+def str2int(s):
+    return reduce(lambda x, y: x * 10 + y, map(char2num, s))
+```
 
 ---
