My_Python_Notebook：map/reduce-练习

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -269,4 +269,57 @@ def str2int(s):
     return reduce(lambda x, y: x * 10 + y, map(char2num, s))
 ```
 
+#### 练习
+
+> 1.利用map()函数，把不规范的英文名字变为首字母大写其他字母小写的规范名字。
+
+**Hint**:
+
+- 字符串支持切片操作，并且可以用加号做字符串拼接。
+- 转换大写用upper函数，转换小写用lower函数。
+
+```python
+def normalize(name):
+    return name[0].upper()+name[1:].lower()
+
+L1 = ['adam', 'LISA', 'barT']
+L2 = list(map(normalize, L1))
+print(L2)
+```
+
+> 2.编写一个prod()函数，可以接受一个list并利用reduce()求积。
+
+**Hint**:
+
+- 用匿名函数做两数相乘
+- 用reduce函数做归约，得到列表元素连乘之积。
+
+```python
+from functools import reduce
+def prod(L):
+    return reduce(lambda x,y: x*y,L)
+
+print('3 * 5 * 7 * 9 =', prod([3, 5, 7, 9]))
+```
+
+> 3.利用map和reduce编写一个str2float函数，把字符串'123.456'转换成浮点数123.45。
+
+**Hint**:
+
+- 这题的思路是找到小数点的位置i(从个位开始数i个数字之后)，然后让转换出的整数除以10的i次方。
+- 另外一种思路是在转换时遇到小数点后，改变转换的方式由 `num*10+当前数字` 变为 `num+当前数字/point`。 point初始为1，每次加入新数字前除以10。
+
+```python
+from functools import reduce
+from math import pow
+
+def chr2num(s):
+    return {'0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9}[s]
+
+def str2float(s):
+    return reduce(lambda x,y:x*10+y,map(chr2num,s.replace('.',''))) / pow(10,len(s)-s.find('.')-1)
+
+print(str2float('985.64785'))
+```
+
 ---
