My_Python_Notebook：filter

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -323,3 +323,35 @@ print(str2float('985.64785'))
 ```
 
 ---
+
+### filter
+
+filter()函数同样是内建函数，用于过滤序列。 filter()接收一个函数和一个Iterable对象。 和map()不同的时，filter()把传入的函数依次作用于每个元素，然后**根据函数返回值是True还是False决定保留还是丢弃该元素**。
+
+简单的奇数筛选例子：
+
+```python
+def is_odd(n):
+    return n % 2 == 1
+
+list(filter(is_odd, [1, 2, 4, 5, 6, 9, 10, 15]))
+# 结果: [1, 5, 9, 15]
+```
+
+筛掉列表的空字符串：
+
+```python
+def not_empty(s):
+    return s and s.strip()
+
+list(filter(not_empty, ['A', '', 'B', None, 'C', '  ']))
+# 结果: ['A', 'B', 'C']
+```
+
+其中，`strip` 函数用于删除字符串中特定字符，格式为：`s.strip(rm)`，删除s字符串中开头、结尾处的包含在rm删除序列中的字符。 rm为空时默认删除空白符(包括'\n', '\r',  '\t',  ' ')。
+
+注意到 `filter()` 函数返回的是一个 **Iterator对象**，也就是一个**惰性序列**，所以要强迫 `filter()` 完成计算结果，需要用 `list()` 函数获得所有结果并返回list。
+
+filter函数最重要的一点就是正确地定义一个**筛选函数**（即传入filter作为参数的那个函数)。
+
+---
