--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -354,4 +354,92 @@ list(filter(not_empty, ['A', '', 'B', None, 'C', '  ']))
 
 filter函数最重要的一点就是正确地定义一个**筛选函数**（即传入filter作为参数的那个函数)。
 
+#### 练习
+
+> 1.用filter筛选素数
+
+这里使用**埃氏筛法**。
+
+> 首先，列出从2开始的所有自然数，构造一个序列：
+
+    2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, ...
+
+> 取序列的第一个数2，它一定是素数，然后用2把序列的2的倍数筛掉：
+
+    3, 5, 7, 9, 11, 13, 15, 17, 19, ...
+
+> 取新序列的第一个数3，它一定是素数，然后用3把序列的3的倍数筛掉：
+
+    5, 7, 11, 13, 17, 19, ...
+
+> 以此类推...
+
+首先构造一个生成器，输出3开始的奇数序列:
+
+```python
+def _odd_iter():
+    n = 1
+    while True:
+        n = n + 2
+        yield n
+```
+
+然后定义一个筛选函数，传入n，判断x能否除尽n：
+
+```python
+def _not_divisible(n):
+    return lambda x: x % n > 0
+```
+
+这里x是匿名函数的参数，**由外部提供**。
+
+然后就是定义返回素数的生成器了。
+
+1.首先输入素数2，然后初始化奇数队列，每次输出队首(必然是素数，因为前一轮的过滤已经排除了比当前队首小且非素数的数)。
+
+2.构造新的队列，每次用当前序列最小的数作为除数，检验后面的数是否素数。
+
+定义如下：
+
+```python
+def primes():
+    yield 2
+    it = _odd_iter() # 初始序列
+    while True:
+        n = next(it) # 返回序列的第一个数
+        yield n
+        it = filter(_not_divisible(n), it) # 构造新序列
+```
+
+这里因为it是一个迭代器，每次使用next就得到队列的下一个元素，实际上就类似队列的出列操作，挤掉队首，不用担心重复。
+
+然后这里filter的原理，就是把当前it队列的每个数都放进_not_divisible(n)中检测一下，注意**不是作为参数n传入而是作为匿名函数的参数x传入**！
+
+`_not_divisible(n)` 实际是**作为一个整体来看**的，它返回一个**自带参数n的函数**(也即那个匿名函数)，然后filter再把列表每一个元素一一传返回的匿名函数中。一定要搞清楚这一点。
+
+3.最后因为primes产生的也是一个无限长的惰性序列，我们一般不需要求那么多，简单写个循环用作退出即可：
+
+```python
+# 打印1000以内的素数:
+for n in primes():
+    if n < 1000:
+        print(n)
+    else:
+        break
+```
+
+> 2.用filter筛选回文数
+
+**Hint**:
+
+- str可以把整数转换为字符串
+- [::-1]可以得到逆序的列表。
+
+```python
+def is_palindrome(n):
+    return str(n) == str(n)[::-1]
+
+print(list(filter(is_palindrome, range(0,1001))))
+```
+
 ---
