My_Python_Notebook：filter-练习

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -395,9 +395,9 @@ def _not_divisible(n):
 
 然后就是定义返回素数的生成器了。
 
-1.首先输入素数2，然后初始化奇数队列，每次输出队首(必然是素数，因为前一轮的过滤已经排除了比当前队首小且非素数的数)。
+- 首先输出素数2，然后初始化奇数队列，每次输出队首(必然是素数，因为前一轮的过滤已经排除了比当前队首小且非素数的数)。
 
-2.构造新的队列，每次用当前序列最小的数作为除数，检验后面的数是否素数。
+- 构造新的队列，每次用当前序列最小的数作为除数，检验后面的数是否素数。
 
 定义如下：
 
@@ -417,7 +417,7 @@ def primes():
 
 `_not_divisible(n)` 实际是**作为一个整体来看**的，它返回一个**自带参数n的函数**(也即那个匿名函数)，然后filter再把列表每一个元素一一传返回的匿名函数中。一定要搞清楚这一点。
 
-3.最后因为primes产生的也是一个无限长的惰性序列，我们一般不需要求那么多，简单写个循环用作退出即可：
+- 最后，因为primes产生的也是一个无限长的惰性序列，我们一般不需要求那么多，简单写个循环用作退出即可：
 
 ```python
 # 打印1000以内的素数:
@@ -427,6 +427,8 @@ for n in primes():
     else:
         break
 ```
+
+<br>
 
 > 2.用filter筛选回文数
 
