My_Python_Notebook：sorted

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -445,3 +445,44 @@ print(list(filter(is_palindrome, range(0,1001))))
 ```
 
 ---
+
+### sorted
+
+Python内置的 `sorted()` 函数就可以对list进行排序：
+
+```python
+>>> sorted([36, 5, -12, 9, -21])
+[-21, -12, 5, 9, 36]
+```
+
+并且 `sorted()` 作为**高阶函数**还允许接受一个key函数用于自定义排序，例如：
+
+```python
+>>> sorted([36, 5, -12, 9, -21], key=abs)
+[5, 9, -12, -21, 36]
+```
+
+key指定的函数将作用于list的每一个元素上，并**根据key函数返回(映射)的结果进行排序**，最后**对应回列表中的元素**进行输出。
+
+再看一个字符串排序例子：
+
+```python
+>>> sorted(['bob', 'about', 'Zoo', 'Credit'])
+['Credit', 'Zoo', 'about', 'bob']
+```
+
+默认情况下是按ASCII码排序的，但我们往往希望按照字典序来排，思路就是把字符串变为全小写/全大写再排：
+
+```python
+>>> sorted(['bob', 'about', 'Zoo', 'Credit'], key=str.lower)
+['about', 'bob', 'Credit', 'Zoo']
+```
+
+默认排序是由小到大，要反相排序只需把reverse参数设为True。 温习前面的知识，这里reverse参数是一个**命名关键字参数**。
+
+```python
+>>> sorted(['bob', 'about', 'Zoo', 'Credit'], key=str.lower, reverse=True)
+['Zoo', 'Credit', 'bob', 'about']
+```
+
+使用好sorted函数的关键就是定义好一个映射函数。
