My_Python_Notebook：装饰器

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -636,6 +636,8 @@ def count():
 
 ---
 
+<br>
+
 ## 匿名函数
 
 当我们在使用函数作为参数时，有些时候，**不需要预先显式地定义函数**，直接传入一个匿名函数更方便。
@@ -671,6 +673,75 @@ def build(x, y):
 ```
 
 这里返回的函数是一个匿名函数，它没有参数，里面调用的变量x和变量y是绑定在外部作用域build中的参数。所以调用build时会根据使用的参数返回这个匿名函数，调用返回的这个函数时使用的变量x和变量y就是调用build时用的参数。
+
+---
+
+<br>
+
+## 装饰器
+
+有时候我们希望为函数增加一些额外的功能，比如在调用函数的前后自动打印某些信息，但又**不希望修改定义函数的代码**。这时就可以使用**装饰器（Decorator）**了，它是python中对[装饰器模式](http://en.wikipedia.org/wiki/Decorator_pattern)的实现，可以**在代码运行期间动态增加功能**（装饰器的代码和要装饰的函数的代码还是要写好，这里只是说对要装饰的函数使用装饰器后，在运行时要装饰的函数会被重新包装一遍，使得它具有了装饰器中定义的功能）。
+
+比方说我们要实现一个打印函数名的额外功能，它是通过调用函数对象的 `__name__` 属性获得的：
+
+```python
+>>> def now():
+...     print('2015-3-25')
+...
+>>> now.__name__
+'now'
+```
+
+如果我们不想在每个函数中都重复写实现这个功能的代码，可以把它写为装饰器的形式，然后为每个函数添加这个装饰器。**装饰器本身也是一个函数**，这个例子可以写为：
+
+```python
+def log(func):
+    def wrapper(*args, **kw):
+        print('call %s():' % func.__name__)
+        return func(*args, **kw)
+    return wrapper
+```
+
+它**像正常函数一样定义**（没有特别的语法），接收一个函数作为参数，并且返回一个函数 `wrapper`（Python中函数也是对象，既可以作为参数，也能被返回）。回顾前一节的内容，可以看出 `wrapper` 函数是一个闭包，它本身接收可变参数 `*args` 和关键字参数 `**kw`，并且引用了外部作用域中绑定在 `log` 函数参数中的 `func` 变量。
+
+使用装饰器时，借助Python的**@语法**，把装饰器放在函数定义的上一行即可：
+
+```python
+@log
+def now():
+    print('2016-2-10')
+```
+
+运行时：
+
+```python
+>>> now()
+call now():
+2015-3-25
+```
+
+原理是这样的，把 `@log` 放在 `now()` 函数的定义前，运行代码的时候实际上是执行了：
+
+```python
+now = log(now)
+```
+
+`now` 这个变量名被重新指向了 `log(now)` 返回的 `wrapper(*args, **kw)` 函数。此时查看 `now` 变量指向的函数对象的名字，会发现已经变成了 `wrapper`：
+
+```python
+>>> now.__name__
+'wrapper'
+```
+
+此时我们调用这个新的 `now()` 函数时，实际上执行的就是 `wrapper` 函数中的代码，打印出函数信息，然后再**调用原来的 `now` 函数**。要注意 **`wrapper` 调用的 `now` 函数和我们调用的 `now` 函数是不同的两个函数**，我们调用的 `now` 函数已经变成了 `wrapper` 函数，而 `wrapper` 函数调用的则是绑定在 `log` 函数参数中的原本的 `now` 函数。
+
+**简单归纳一下**：
+
+- 装饰器也是一个函数
+- 装饰器实际上是把传入的函数进行一层包装，返回一个新函数
+- 要为函数添加装饰器时，在函数定义前使用 `@装饰器名` 即可
+
+装饰器的原理部分如果还有不清楚的，不妨看看知乎上[李冬](https://www.zhihu.com/question/26930016/answer/105175177)的答案，讲得比较浅显和清楚。
 
 ---
 
