My_Python_Notebook：匿名函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -636,3 +636,41 @@ def count():
 
 ---
 
+## 匿名函数
+
+当我们在使用函数作为参数时，有些时候，**不需要预先显式地定义函数**，直接传入一个匿名函数更方便。
+
+举个简单例子，计算 `f(x)=x²` 时，不需要显示定义f(x)，使用匿名函数可以直接一行解决，这样写非常简洁。
+
+```python
+>>> list(map(lambda x: x * x, [1, 2, 3, 4, 5, 6, 7, 8, 9]))
+[1, 4, 9, 16, 25, 36, 49, 64, 81]
+```
+
+**关键字lambda**表示要定义一个匿名函数，**冒号前面**的x表示函数的参数。
+
+匿名函数有个限制，就是**只能包含一个表达式**，不用写return，**返回值就是该表达式的结果**。
+
+所以上面这个匿名函数就是：x作为参数传入，返回 `x*x` 的结果。
+
+用匿名函数有个好处，因为函数没有名字，**不必担心函数名冲突**。此外，匿名函数也是一个**函数对象**，也可以把匿名函数赋值给一个变量，再利用变量来调用该函数：
+
+```python
+>>> f = lambda x: x * x
+>>> f
+<function <lambda> at 0x101c6ef28>
+>>> f(5)
+25
+```
+
+并且匿名函数作为一个函数对象，也能被函数返回(像上一节那样)：
+
+```python
+def build(x, y):
+    return lambda: x * x + y * y
+```
+
+这里返回的函数是一个匿名函数，它没有参数，里面调用的变量x和变量y是绑定在外部作用域build中的参数。所以调用build时会根据使用的参数返回这个匿名函数，调用返回的这个函数时使用的变量x和变量y就是调用build时用的参数。
+
+---
+
