My_Python_Notebook：带参数的decorator

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -720,13 +720,13 @@ call now():
 2015-3-25
 ```
 
-原理是这样的，把 `@log` 放在 `now()` 函数的定义前，运行代码的时候实际上是执行了：
+原理是这样的，把 `@log` 放在 `now()` 函数的定义前，运行代码的时候，实际上是在函数定义后执行了：
 
 ```python
 now = log(now)
 ```
 
-`now` 这个变量名被重新指向了 `log(now)` 返回的 `wrapper(*args, **kw)` 函数。此时查看 `now` 变量指向的函数对象的名字，会发现已经变成了 `wrapper`：
+也即执行了 `log` 函数，并把 `now` 这个变量名赋值为 `log(now)` 返回的 `wrapper(*args, **kw)` 函数（也即 `now` 引用的函数对象变了）。此时查看 `now` 变量指向的函数对象的名字，会发现已经变成了 `wrapper`：
 
 ```python
 >>> now.__name__
@@ -745,3 +745,46 @@ now = log(now)
 
 ---
 
+### 带参数的decorator
+
+前面提到**装饰器可以用于为函数提供增强功能而无须修改函数本身的代码**，在装饰器函数中，闭包 `wrapper` 接收的参数就是函数的参数。但是，如果我们希望在使用装饰器时可以更灵活一些，为不同的函数添加功能类似但又略有不同的装饰器呢？这时我们可以使用**带参数的装饰器**来实现（装饰器本身也是函数，是可以传入参数的）。
+
+比方说要实现一个自定义打印文本的功能：
+
+```python
+def log(text):
+    def decorator(func):
+        def wrapper(*args, **kw):
+            print('%s %s():' % (text, func.__name__))
+            return func(*args, **kw)
+        return wrapper
+    return decorator
+```
+
+注意到这里在 `wrapper` 和 `log` 之间又套了一层函数，现在变为了 `log` 接收参数 `text` 并返回一个装饰器 `decorator`。这个 `decorator` 接收一个函数对象，输出文本 `text` 和函数对象的名字，理解起来其实不难。
+
+使用这个装饰器：
+
+```python
+@log('execute')
+def now():
+    print('2015-3-25')
+```
+
+执行结果如下：
+
+```python
+>>> now()
+execute now():
+2015-3-25
+```
+
+事实上，把 `@log` 放在 `now()` 函数的定义前，运行代码时实际上在函数定义后执行了：
+
+```python
+>>> now = log('execute')(now)
+```
+
+也即是先调用 `log` 函数，传入参数 `log('execute')`，这时返回了 `decorator` 这个装饰器，然后传入了 `now` 函数，最后返回包装好的 `now` 函数（也即 `wrapper` 函数）。
+
+---
