My_Python_Notebook：属性复制

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -788,3 +788,23 @@ execute now():
 也即是先调用 `log` 函数，传入参数 `log('execute')`，这时返回了 `decorator` 这个装饰器，然后传入了 `now` 函数，最后返回包装好的 `now` 函数（也即 `wrapper` 函数）。
 
 ---
+
+### 属性复制
+
+前面已经提到使用 **`@语法`** 之后，now变量指向的函数名字等属性都改变了，变成了 `wrapper` 函数的，实际上，我们希望变量 `now` 的属性依然是原本 `now()` 函数的属性，这时就需要进行**属性复制**。
+
+我们不需要编写类似 `wrapper.__name__ = func.__name__` 这样的代码来逐个把原函数的属性复制给 `wrapper`，Python内置的 `functools.wraps` 装饰器可以满足我们的需求。方法如下：
+
+    import functools
+
+    def log(func):
+        @functools.wraps(func)
+        def wrapper(*args, **kw):
+            print('call %s():' % func.__name__)
+            return func(*args, **kw)
+        return wrapper
+
+和原来定义装饰器的代码对比，唯一修改的就是加上了 `@functools.wraps(func)` 这一句。 当然，还要注意先导入functools模块。
+
+---
+
