My_Python_Notebook：习题-习题1

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -795,16 +795,58 @@ execute now():
 
 我们不需要编写类似 `wrapper.__name__ = func.__name__` 这样的代码来逐个把原函数的属性复制给 `wrapper`，Python内置的 `functools.wraps` 装饰器可以满足我们的需求。方法如下：
 
-    import functools
+```python
+import functools
 
-    def log(func):
-        @functools.wraps(func)
-        def wrapper(*args, **kw):
-            print('call %s():' % func.__name__)
-            return func(*args, **kw)
-        return wrapper
+def log(func):
+    @functools.wraps(func)
+    def wrapper(*args, **kw):
+        print('call %s():' % func.__name__)
+        return func(*args, **kw)
+    return wrapper
+```
 
 和原来定义装饰器的代码对比，唯一修改的就是加上了 `@functools.wraps(func)` 这一句。 当然，还要注意先导入functools模块。
 
 ---
 
+### 练习
+
+#### 习题1
+
+> 编写一个decorator，能在函数调用的前后分别打印出 `'begin call'` 和 `'end call'` 的日志。
+
+**解析：**
+
+这题很简单，在 `wrapper` 调用原函数之前，各编写一条打印语句就可以了。
+
+**代码：**
+
+```python
+def decorator(func):
+    def wrapper(*args,**kw):
+        print("begin call")
+        a = func(*args,**kw)
+        print("end call")
+        return a
+    return wrapper
+
+@decorator
+def now():
+    print("haha")
+```
+
+**执行结果：**
+
+```python
+>>> now   # now是一个函数
+<function decorator.<locals>.wrapper at 0x00000254B45D8EA0>
+>>> now() # 调用now函数
+begin call
+haha
+end call
+```
+
+
+
+---
