My_Python_Notebook：习题-习题2

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -847,6 +847,65 @@ haha
 end call
 ```
 
+#### 习题2
 
+> 写出一个@log的decorator，使它既支持：
+
+```python
+@log
+def f():
+    pass
+```
+
+> 又支持：
+
+```python
+@log('execute')
+def f():
+    pass
+```
+
+**解析**：
+
+思路很简单，我们知道使用不带参数的装饰器时，传入装饰器函数（即这里的 `log`）的参数就是要装饰的函数（比方说 `now` 函数）；而带参数的装饰器接收的参数则不是要装饰的函数而是别的（比方说一个字符串）。所以呀，我们可以依然使用带参数的装饰器作为原型，但在里面加入对参数类型的判断，如果接收到字符串参数则表示这次调用的是有参数的装饰器，否则就是调用不带参数的装饰器。
+
+**代码：**
+
+```python
+import functools
+def log(text): # 默认参数，没有参数时，text就是空字符串
+    def decorator(func):
+        @functools.wraps(func)    # 属性复制
+        def wrapper(*args,**kw):
+            if isinstance(text, str):
+                print('%s %s():' % (text, func.__name__))
+            else:
+                print('%s():' % func.__name__)
+            return func(*args, **kw)
+        return wrapper
+    if isinstance(text, str): # 接收到字符串后返回decorator函数
+        return decorator
+    else:
+        return decorator(text) # 接收到函数则直接返回wrapper函数
+
+@log('execute')  # 带参数text的decorator
+def now1():
+    print('2016-2-10')
+
+@log             # 不带参数text的decorator
+def now2():
+    print('2016-2-10')
+```
+
+**执行结果：**
+
+```python
+>>> now1()
+execute now1():
+2016-2-10
+>>> now2()
+now2():
+2016-2-10
+```
 
 ---
