My_Python_Notebook：偏函数

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -909,3 +909,64 @@ now2():
 ```
 
 ---
+
+<br>
+
+## 偏函数
+
+Python的functools模块提供了很多有用的功能，其中一个就是**偏函数（Partial function）**。
+
+`functools.partial(f, *args, **kw)` 的作用就是创建一个偏函数，**把一个函数的某些参数给固定住**（也就是设置默认值），返回一个新的函数，调用这个新函数会更简单。
+
+举个例子，字符串转整型数的函数int，可以使用**关键字参数base**，指定字符串的进制是多少，然后转换为int的时候会按照base进行进制转换，把字符串**转换成十进制整数**。 如：
+
+```python
+>>> int('1000000', base=2)
+64
+```
+
+如果有大量的二进制字符串要转换，每次都写base=2很麻烦，我们就会希望定义一个新函数，把base参数固定为2，无须每次指定：
+
+```python
+def int2(x, base=2):
+    return int(x, base)
+```
+
+实际上我们不需要自己定义，使用 `functools.partial` 就可以轻松创建偏函数：
+
+```python
+>>> import functools
+>>> int2 = functools.partial(int, base=2)
+>>> int2('1000000')
+64
+>>> int2('1010101')
+85
+```
+
+运行int('1000000')实际相当于：
+
+```python
+kw = { 'base': 2 }
+int('1000000', **kw)
+```
+
+**Notice**：
+
+这里创建偏函数只是设定了默认值为2，**调用偏函数时依然可以把参数设置为其他值**。
+
+```python
+>>> int2('1000000', base=10)
+1000000
+```
+
+`functools.partial` **不但可以接收关键字参数，还可以接收可变参数** `*args`，如：
+
+```python
+>>> max2 = functools.partial(max, 10)
+>>> max2(5, 6, 7)
+10
+```
+
+相当于max函数每次接收到若干数字时，都默认再放入一个整数10，然后找其中的最大值。
+
+---
