My_Python_Notebook：模块

--- a/My_Python_Notebook/04函数式编程.md
+++ b/My_Python_Notebook/04函数式编程.md
@@ -12,7 +12,7 @@
 
 对应到编程语言，就是越低级的语言，越贴近计算机，抽象程度低，执行效率高，比如C语言；越高级的语言，越贴近计算，抽象程度高，执行效率低，比如Lisp语言。
 
-归纳一下：
+**归纳一下**：
 
 |  | 低级语言 | 高级语言 |
 |:-:|:-:|:-:|
@@ -26,6 +26,34 @@
 函数式编程的一个特点就是，**允许把函数本身作为参数传入另一个函数，还允许返回一个函数**！
 
 Python**仅对函数式编程提供部分支持**。由于Python允许使用变量，因此，**Python不是纯函数式编程语言**。
+
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [函数式编程的三大特性](#函数式编程的三大特性)
+- [函数式编程的几个技术](#函数式编程的几个技术)
+- [函数式编程的几个好处](#函数式编程的几个好处)
+    - [简单举例](#简单举例)
+- [高阶函数](#高阶函数)
+    - [变量可以指向函数](#变量可以指向函数)
+    - [函数名也是变量](#函数名也是变量)
+    - [传入函数](#传入函数)
+    - [map/reduce](#mapreduce)
+    - [filter](#filter)
+    - [sorted](#sorted)
+- [返回函数](#返回函数)
+    - [函数作为返回值](#函数作为返回值)
+    - [闭包](#闭包)
+- [匿名函数](#匿名函数)
+- [装饰器](#装饰器)
+    - [带参数的decorator](#带参数的decorator)
+    - [属性复制](#属性复制)
+    - [练习](#练习)
+- [偏函数](#偏函数)
+
+<!-- /MarkdownTOC -->
+
 
 ## 函数式编程的三大特性
 
