My_Python_Notebook：使用模块的几个好处

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -5,3 +5,14 @@
 为了编写易于维护的代码，我们把很多函数分组，分别放到不同的文件里，这样，每个文件包含的代码就相对较少，很多编程语言都采用这种组织代码的方式。
 
 在Python中，**一个.py文件就称之为一个模块**（Module）**。
+
+## 使用模块的几个好处
+
+- 大大提高了代码的可维护性。
+- 编写代码不必从零开始。当一个模块编写完毕，就可以被其他地方引用。
+- 避免函数名和变量名冲突。相同名字的函数和变量完全可以分别存在不同的模块中。 但还是要注意**变量名尽量不要与BIF名字冲突**。
+
+---
+
+<br>
+
