My_Python_Notebook：使用模块

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -4,7 +4,7 @@
 
 为了编写易于维护的代码，我们把很多函数分组，分别放到不同的文件里，这样，每个文件包含的代码就相对较少，很多编程语言都采用这种组织代码的方式。
 
-在Python中，**一个.py文件就称之为一个模块**（Module）**。
+在Python中，**一个.py文件就称之为一个模块（Module）**。
 
 ## 使用模块的几个好处
 
@@ -20,7 +20,7 @@
 
 由于不同的人编写的模块名可能会相同，为了**避免模块名冲突**，Python又引入了**按目录来组织模块**的方法，称为**包（Package）**。
 
-![图片](http://www.liaoxuefeng.com/files/attachments/001388366035986b515b38d149b4efaaac3f2c721813d2c000/0)
+![图片](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_Module0.png)
 
 假设图中abc和xyz两个模块的名字和外面其他模块名字冲突了，我们可以通过包来组织模块，避免冲突。 只要**顶层包名(也即这里的mycompany文件夹)不同即可**。
 
@@ -32,10 +32,41 @@
 
 - **每个包目录下都必须有一个 `__init__.py` 文件**，否则Python就不会把这个文件夹当作一个包。  `__init__.py`可以是空文件，也可以有Python代码，它本身就是一个模块，并且**它的模块名就是包名**(这里是 `mycompany`)。
 
-![图片](http://www.liaoxuefeng.com/files/attachments/00138836605526535c9bebcbf414c3dae2430c50bbeef29000/0)
+![图片](http://oe0e8k1nf.bkt.clouddn.com/My_Python_Notebook_Module1.png)
 
 **包结构可以是多级的**。比方说这里www.py的**模块名**就是 `mycompany.web.www` 。 两个utils.py的模块名分别是 `mycompany.utils` 和 `mycompany.web.utils`，它们不会冲突 。 `mycompany.web` 这个模块名对应的就是web目录下的 `__init__.py` 模块。
 
 **Notice**:
 
 自己创建的模块的模块名**不要和Python自带的模块的模块名冲突**！ 比如系统自带sys模块，自己的模块就不要命名sys.py，否则无法会无法正确import自带的sys模块。
+
+---
+
+<br>
+
+## 使用模块
+
+Python本身就内置了很多模块可以直接import使用。 下面我们自己编写一个hello模块作为例子：
+
+```python
+#!/usr/bin/env python3
+# -*- coding: utf-8 -*-
+
+' a test module '
+
+__author__ = 'Michael Liao'
+
+import sys
+
+def test():
+    args = sys.argv
+    if len(args)==1:
+        print('Hello, world!')
+    elif len(args)==2:
+        print('Hello, %s!' % args[1])
+    else:
+        print('Too many arguments!')
+
+if __name__=='__main__':
+    test()
+```
