My_Python_Notebook：使用模块（例子解析）-在命令行下执行

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -113,3 +113,18 @@ if __name__=='__main__':
 其中 `__name__` 变量是个特殊变量，当我们**在命令行执行**hello.py时，Python解释器就会把 `__name__` 变量赋值为 `__main__`。
 
 但**如果在别的文件中导入模块**，是不会对 `__name__` 赋值的操作，if判断就为 `False`。 借助这个特性，我们可以**在if判断中编写一些额外的代码**，用于测试模块的功能，而在使用（导入）模块时，if判断里的代码不会被执行。
+
+#### 在命令行下执行
+
+保存代码文件后，打开命令行，先把路径切换到保存 `hello.py` 的目录，然后执行：
+
+```
+C:\Users\Administrator\Desktop>python Hello.py
+No argument is passed.
+
+C:\Users\Administrator\Desktop>python Hello.py Lincoln
+Hello, Lincoln!
+```
+
+
+
