--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -108,11 +108,11 @@ if __name__=='__main__':
     test()
 ```
 
-在hello模块中我们定义了一个test函数，这个条件判断的意思就是，如果程序执行到这里，`__name__` 变量的值是 `'__main__'` 的话就执行 `test()` 函数。
+在hello模块中我们定义了一个test函数，这个条件判断的意思就是，如果程序执行到这里，`__name__` 变量的值是 `'__main__'` 的话就执行 `test` 函数。
 
 其中 `__name__` 变量是个特殊变量，当我们**在命令行执行**hello.py时，Python解释器就会把 `__name__` 变量赋值为 `__main__`。
 
-但**如果在别的文件中导入模块**，是不会对 `__name__` 赋值的操作，if判断就为 `False`。 借助这个特性，我们可以**在if判断中编写一些额外的代码**，用于测试模块的功能，而在使用（导入）模块时，if判断里的代码不会被执行。
+但**如果在别的文件中导入模块**，`__name__` 的值就是模块的名字而非 `__main__`，此时if判断结果为 `False`。 借助这个特性，我们可以**在if判断中编写一些额外的代码**，用于测试模块的功能，而在使用（导入）模块时，if判断里的代码不会被执行。
 
 #### 在命令行下执行
 
@@ -126,5 +126,21 @@ C:\Users\Administrator\Desktop>python Hello.py Lincoln
 Hello, Lincoln!
 ```
 
+#### 在交互环境下执行
+
+比方说使用IDLE或者在命令行中输入python进入：
+
+```python
+C:\Users\Administrator\Desktop>python
+Python 3.5.1 |Anaconda 4.0.0 (64-bit)| (default, Feb 16 2016, 09:49:46) [MSC v.1900 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>> import Hello
+>>> Hello.__name__
+'Hello'
+>>> Hello.test()
+No argument is passed.
+```
+
+导入Hello模块时，它的 `__name__` 变量会被赋值为模块名 `Hello`，而不是 `__main__`，所以if判断为 `False`，if判断里的代码不会被执行。如果要使用 `test` 函数，就要通过 `模块名.函数名` 的方式进行调用，使用模块内的其他变量（函数名也属于变量）同理。
 
 
