--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -46,7 +46,7 @@
 
 ## 使用模块
 
-Python本身就内置了很多模块可以直接import使用。 下面我们自己编写一个hello模块作为例子：
+Python本身就内置了很多模块可以直接import使用。 下面我们自己编写一个Hello模块作为例子：
 
 ```
 #!/usr/bin/env python3
@@ -77,7 +77,7 @@ if __name__=='__main__':
 
 文件的第1行和第2行是**标准注释**：
 
-- 第1行注释是用于**声明使用什么程序来执行这个脚本**，它可以**使得这个脚本能在Unix/Linux/Mac上直接运行**（也即**可以使用 `./hello.py` 的形式执行**而不是 `python hello.py` 的形式）。如果系统装了多个版本的python，`#!/usr/bin/env python3` 会保证调用环境变量 `$PATH` 中的第一个叫python3的程序来执行脚本。又因为在一些系统中python能被重定向到python3，也即默认使用python3，所以直接用 `#!/usr/bin/env python` 也是可以的。还有一种写法是 `#!/usr/bin/python`，这样写就是指定一个路径，兼容性不如使用env的写法好。注意，如果我们使用 `python hello.py` 或者 `python3 hello.py` 的方式**直接指定解释器来执行的话，这句注释就没用了**。另外，在Windows下**这句注释也是被忽略的**，但**为了代码的兼容性最好还是写上**。
+- 第1行注释是用于**声明使用什么程序来执行这个脚本**，它可以**使得这个脚本能在Unix/Linux/Mac上直接运行**（也即**可以使用 `./Hello.py` 的形式执行**而不是 `python Hello.py` 的形式）。如果系统装了多个版本的python，`#!/usr/bin/env python3` 会保证调用环境变量 `$PATH` 中的第一个叫python3的程序来执行脚本。又因为在一些系统中python能被重定向到python3，也即默认使用python3，所以直接用 `#!/usr/bin/env python` 也是可以的。还有一种写法是 `#!/usr/bin/python`，这样写就是指定一个路径，兼容性不如使用env的写法好。注意，如果我们使用 `python Hello.py` 或者 `python3 Hello.py` 的方式**直接指定解释器来执行的话，这句注释就没用了**。另外，在Windows下**这句注释也是被忽略的**，但**为了代码的兼容性最好还是写上**。
 
 - 第2行注释表示（解释器和编辑器）**应使用UTF-8编码来读取这个.py脚本文件中的代码文本**。**在Python2中，默认源代码编码方式为ASCII**，要用到中文就得采用很别扭的escape写法，直接写中文会出错。后来有了[PEP 0263标准](https://www.python.org/dev/peps/pep-0263/)，规定了**显式声明代码文本编码**的方法。一般有三种格式，包括：能被大部分编辑器识别的 `# -*- coding: utf-8 -*-`，最简单的 `# coding=utf-8` 以及vim的 `# vim: set fileencoding=utf-8` （其实还可以写成别的方式，主要看编辑器怎样正则匹配这一行）。当然这里的utf-8可以换为其他编码。注意**编码声明必须放在代码文件的第一行或第二行**。另外，这里只是**声明读取时采用的编码方式，保存代码时用什么方式要自己设置编辑器**。实测由于**Python3默认用utf-8编码**，所以只要我们正确使用utf-8编码保存代码文件，那么读取时不声明也没关系。当然，**为了代码的兼容性最好还是写上**。
 
@@ -97,9 +97,9 @@ if __name__=='__main__':
 
 **sys模块有一个 `argv` 变量**，这个变量属于list类型，存储着**命令行的所有参数**（即我们在命令行执行该脚本时使用的参数）。`argv` 列表中至少包含一个元素，因为**第一个参数永远是该脚本文件的名称**，例如：
 
-在命令行执行 `python3 hello.py` 获得的 `sys.argv` 就是 `['hello.py']`；
+在命令行执行 `python3 Hello.py` 获得的 `sys.argv` 就是 `['Hello.py']`；
 
-在命令行执行 `python3 hello.py Michael` 获得的 `sys.argv` 就是 `['hello.py', 'Michael]`。 要获取字符串 `'Michael'` 只需要调用 `sys.argv[1]`。
+在命令行执行 `python3 Hello.py Michael` 获得的 `sys.argv` 就是 `['Hello.py', 'Michael]`。 要获取字符串 `'Michael'` 只需要调用 `sys.argv[1]`。
 
 3) **条件判断**
 
@@ -108,15 +108,15 @@ if __name__=='__main__':
     test()
 ```
 
-在hello模块中我们定义了一个test函数，这个条件判断的意思就是，如果程序执行到这里，`__name__` 变量的值是 `'__main__'` 的话就执行 `test` 函数。
+在Hello模块中我们定义了一个test函数，这个条件判断的意思就是，如果程序执行到这里，`__name__` 变量的值是 `'__main__'` 的话就执行 `test` 函数。
 
-其中 `__name__` 变量是个特殊变量，当我们**在命令行执行**hello.py时，Python解释器就会把 `__name__` 变量赋值为 `__main__`。
+其中 `__name__` 变量是个特殊变量，当我们**在命令行执行**Hello.py时，Python解释器就会把 `__name__` 变量赋值为 `__main__`。
 
-但**如果在别的文件中导入模块**，`__name__` 的值就是模块的名字而非 `__main__`，此时if判断结果为 `False`。 借助这个特性，我们可以**在if判断中编写一些额外的代码**，用于测试模块的功能，而在使用（导入）模块时，if判断里的代码不会被执行。
+但**如果在别的文件中导入模块，`__name__` 的值就是模块的名字**而非 `__main__`，此时if判断结果为 `False`。 借助这个特性，我们可以**在if判断中编写一些额外的代码**，用于测试模块的功能，而在使用（导入）模块时，if判断里的代码不会被执行。
 
 #### 在命令行下执行
 
-保存代码文件后，打开命令行，先把路径切换到保存 `hello.py` 的目录，然后执行：
+保存代码文件后，打开命令行，先把路径切换到保存 `Hello.py` 的目录，然后执行：
 
 ```
 C:\Users\Administrator\Desktop>python Hello.py
@@ -141,6 +141,29 @@ Type "help", "copyright", "credits" or "license" for more information.
 No argument is passed.
 ```
 
-导入Hello模块时，它的 `__name__` 变量会被赋值为模块名 `Hello`，而不是 `__main__`，所以if判断为 `False`，if判断里的代码不会被执行。如果要使用 `test` 函数，就要通过 `模块名.函数名` 的方式进行调用，使用模块内的其他变量（函数名也属于变量）同理。
+导入Hello模块时，它的 `__name__` 变量会被赋值为模块名 `Hello`，而不是 `__main__`，所以if判断为 `False`，if判断里的代码不会被执行。如果要使用 `test` 函数，就要通过 `模块名.函数名` 的方式进行调用，使用模块内的其他变量/函数同理。
+
+---
+
+### 命名规范和作用域
+
+在模块中我们会定义很多函数和变量，有些是希望给别人用的，有些则希望仅仅在模块内部使用。
+
+#### 公开(public)的变量和函数
+
+命名格式如： `abc`，`x123`，`PI`， 如果是有特殊用途则**在名称前后各加上两个下划线**，如：`__author__`，`__name__`。
+
+```python
+>>> Hello.__doc__
+'This is the docstring(document comment) of this module '
+>>> Hello.__name__
+'Hello'
+>>> Hello.__author__
+'Lincoln Deng'
+>>> Hello.__file__
+'C:\\Users\\Administrator\\Desktop\\Hello.py'
+```
+
+可以看到 `__doc__` 变量返回了我们前面模块例子的代码中第一个字符串，也即**文档注释(DocString)**。什么是文档注释呢？其实就是一个**模块/类/函数/方法的定义中第一个声明的字符串**，使用这些对象的 `.doc` 属性即可访问。关于文档注释的书写标准可以查看[PEP 0257](https://www.python.org/dev/peps/pep-0257/)。
 
 
