My_Python_Notebook：命名规范和作用域-私有(private)的变量和函数

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -166,4 +166,31 @@ No argument is passed.
 
 可以看到 `__doc__` 变量返回了我们前面模块例子的代码中第一个字符串，也即**文档注释(DocString)**。什么是文档注释呢？其实就是一个**模块/类/函数/方法的定义中第一个声明的字符串**，使用这些对象的 `.doc` 属性即可访问。关于文档注释的书写标准可以查看[PEP 0257](https://www.python.org/dev/peps/pep-0257/)。
 
+#### 私有(private)的变量和函数
+
+命名格式是在**名称前加一个或两个下划线**，如 `_xxx` 和 `__xxx`。这样的函数或变量**不应该被外部直接引用(即通过 `模块名.变量名` 的方式调用)**。比方说下面定义的 `_private_1` 函数和 `_private_2` 函数，我们不希望使用这个模块的人调用它们：
+
+```python
+def _private_1(name):
+    return 'Hello, %s' % name
+
+def _private_2(name):
+    return 'Hi, %s' % name
+
+def greeting(name):
+    if len(name) > 3:
+        return _private_1(name)
+    else:
+        return _private_2(name)
+```
+
+虽然不希望用户调用私有函数，但我们**可以暴露给用户一个接口（公开的函数）**，也即这里的 `greeting` 函数，把调用两个私有函数的代码和逻辑封装在里面，用户直接调用 `greeting` 函数，然后让 `greeting` 函数决定怎样调用私有函数。
+
+当用户使用模块时不需要关心私有的变量和函数，直接使用公开的变量和函数就可以了。 这是一种常用的**代码封装和抽象**的方法。
+
+**注意：**
+
+这里说私有函数和变量 **不应该被直接引用**，而不是 **不能被直接引用**。 因为Python没有方法可以限制用户调用私有函数和变量（没有），所以这样命名**只是一种约定的编程习惯**，使用者怎么做就要看他自己怎么决定了。
+
+良好的习惯是**外部不需要引用的函数全部定义成private，只有外部需要引用的函数才定义为public**。
 
