My_Python_Notebook：安装第三方库

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -194,3 +194,47 @@ def greeting(name):
 
 良好的习惯是**外部不需要引用的函数全部定义成private，只有外部需要引用的函数才定义为public**。
 
+---
+
+<br>
+
+## 安装第三方库
+
+在Python中，安装第三方库（从而使用第三方库中提供的第三方模块），可以通过**包管理工具pip**（也有其他的包管理工具）完成。
+
+安装Python时选择了安装pip的话，就可以直接在命令行中使用pip工具了。
+
+```
+pip install Pillow
+```
+
+在命令行键入 `pip install 第三方库的库名` 后， pip就会自动帮用户下载并安装第三方库。
+
+![安装1](http://imglf0.nosdn.127.net/img/dnpRZUpJZlB5VUQ2UTdlUDluSm9RZEZVQ0hEMjZrWjJReENQRmwvNVp4U0tnN3VUV004RE1BPT0.png?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg)
+
+![安装2](http://imglf2.nosdn.127.net/img/dnpRZUpJZlB5VUQ2UTdlUDluSm9RZU9hUFRtT0dMaFRWTENkaW1SREVrN25rd3VXSlVBKy9nPT0.png?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg)
+
+这里安装的是**Python Imaging Library**这个第三方库，是一个Python下非常强大的图像处理工具库。 因为PIL只支持到Python2.7，所以这里用的是基于PIL开发的支持Python3的**Pillow**。
+
+安装完成后打开 `F:\Python35\Lib\site-packages` 文件夹（具体路径看安装Python的位置而定）就会发现多了两个文件夹，一个是 `Pillow-3.1.1.dist-info`, 另一个是 `PIL`。 前者包含该库的一些基本信息，后者就是我们需要用到的包了，里面是有 `__init__.py` 文件的。
+
+安装好的包我们可以在文件中直接用 `from 包名 import 模块名` 来导入要使用的模块，而不需要先转到模块所在的目录下再导入，也不需要把模块复制到我们的工程文件夹中。
+
+举一个使用Pillow包中利用Image模块生成图片缩略图的例子：
+
+```python
+>>> from PIL import Image
+>>> im = Image.open('test.png') # 打开一张照片
+>>> print(im.format, im.size, im.mode) # 打印照片的文件格式&尺寸&颜色模式
+PNG (400, 300) RGB
+>>> im.thumbnail((200, 100)) # 创建缩略图
+>>> im.save('thumb.jpg', 'JPEG') # 保存缩略图
+>>> im.show()  # 查看图片
+```
+
+其他常用的第三方库还有MySQL的驱动：mysql-connector-python，用于科学计算的NumPy库：numpy，用于生成文本的模板工具Jinja2，等等。
+
+---
+
+<br>
+
