My_Python_Notebook：模块搜索路径

--- a/My_Python_Notebook/05模块.md
+++ b/My_Python_Notebook/05模块.md
@@ -238,3 +238,45 @@ PNG (400, 300) RGB
 
 <br>
 
+## 模块搜索路径
+
+在Python中导入模块时，Python解释器会从指定好的路径中进行搜索。我们可以使用sys模块的变量 `path` 来查看模块的搜索路径，导入模块时会从这些路径中查找.py文件：
+
+```python
+C:\Users\Administrator>python
+Python 3.5.1 |Anaconda 4.0.0 (64-bit)| (default, Feb 16 2016, 09:49:46) [MSC v.1900 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>> import sys
+>>> sys.path
+['', 'F:\\Anaconda3\\python35.zip', 'F:\\Anaconda3\\DLLs', 'F:\\Anaconda3\\lib', 'F:\\Anaconda3', 'F:\\Anaconda3\\lib\\site-packages',
+'F:\\Anaconda3\\lib\\site-packages\\Sphinx-1.3.5-py3.5.egg',
+'F:\\Anaconda3\\lib\\site-packages\\win32', 'F:\\Anaconda3\\lib\\site-packages\\win32\\lib',
+'F:\\Anaconda3\\lib\\site-packages\\Pythonwin', 'F:\\Anaconda3\\lib\\site-packages\\setuptools-20.3-py3.5.egg']
+```
+
+sys模块的 `path` 变量是一个列表，它会**在启动Python时被初始化**，初始赋值（按顺序）由三个部分组成，一是**当前目录**（即列表中的空字符串），二是**环境变量 `PYTHONPATH` 中的路径**，三是一些**默认的路径**（包含内置模块和一些通过pip安装的模块）。由于我没有设置环境变量 `PYTHONPATH`，所以上面只有一和三两部分。尝试新建一个名为 `PYTHONPATH` 的环境变量，添加一条路径指向F盘，**重新启动Python程序**，此时就会发现 `path` 变量的初始赋值中多了F盘的路径了：
+
+```python
+C:\Users\Administrator>python
+Python 3.5.1 |Anaconda 4.0.0 (64-bit)| (default, Feb 16 2016, 09:49:46) [MSC v.1900 64 bit (AMD64)] on win32
+Type "help", "copyright", "credits" or "license" for more information.
+>>> import sys
+>>> sys.path
+['', 'F:\\', 'F:\\Anaconda3\\python35.zip', 'F:\\Anaconda3\\DLLs', 'F:\\Anaconda3\\lib', 'F:\\Anaconda3', 'F:\\Anaconda3\\lib\\site-packages',
+'F:\\Anaconda3\\lib\\site-packages\\Sphinx-1.3.5-py3.5.egg',
+'F:\\Anaconda3\\lib\\site-packages\\win32', 'F:\\Anaconda3\\lib\\site-packages\\win32\\lib',
+'F:\\Anaconda3\\lib\\site-packages\\Pythonwin', 'F:\\Anaconda3\\lib\\site-packages\\setuptools-20.3-py3.5.egg']
+```
+
+如果需要使用自己编写的模块，可以把它们放到这些目录中。 也可以自己**增加搜索路径**。具体来说分为两种方法：
+
+- 方法一：**直接使用 `apeend` 往 `sys.path` 列表添加搜索路径**，这种方法**只在该次运行时有效**，重启Python交互环境后会恢复原来的路径：
+
+```python
+>>> import sys
+>>> sys.path.append('C:\\Users\\Administrator\\Desktop')
+```
+
+- 方法二：**配置环境变量PYTHONPATH**，只需要增加自己的搜索路径，默认的路径是不会被覆盖掉的，使用这种方法就**不需要每次都修改 `sys.path` **了。
+
+关于 `sys.path` 的详情可以查看[官方文档](https://docs.python.org/3/library/sys.html#sys.path)。
